# mcp-testing-notes-app

./: README.md
backend/: README.md  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: notes.py
backend/tests/: test_notes_api.py
frontend/: README.md  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  time.ts  types.ts
