[project]
name = "mcp-testing-notes-backend"
version = "0.1.0"
description = "FastAPI backend for MCP Testing Notes App"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "httpx>=0.27.0,<0.28.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["app"]
